# ChangeLog for dev-java/monolog
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  